fix: dark mode theme

--- a/packages/wathqny/src/styles/wathqny.css
+++ b/packages/wathqny/src/styles/wathqny.css
@@ -14,11 +14,14 @@
     --lightest: light-dark(oklch(96.74% 0.0013 286.38), oklch(21.03% 0.0059 285.89));
     --white: light-dark(oklch(100% 0 0), oklch(21.03% 0.0059 285.89));
     --black: light-dark(oklch(21.03% 0.0059 285.89), oklch(100% 0 0));
-    color-scheme: light;
   }
   
   .dark {
     color-scheme: dark;
+  }
+
+  .light {
+    color-scheme: light;
   }
 
   *,
